# bruter changelog https://github.com/brutopolis/bruter

(27/05/2025) - version 0.8.7

- all list_* are now prefixed as  bruter_*;
- all LIST_* macros are now prefixed as BRUTER_*;
- every function is now declared and defined static inline(though, the compiler might not inline them anyway);
- bruter is now a header-only library, you can just include bruter.h and use it;
- some safety checks added;

(19/05/2025) - version 0.8.6

- lists and tables share the same functions once again, just like it was but safer;
- when table, duplicate and init will set all the allocated memory for keys to NULL;
- new macro VALUE(type, value), it will create a new value of the type and set the value;
- all macros are now uppercase;
- removed Byte type;
- some fixes;

(17/05/2025) - version 0.8.5a

- new function list_copy, it copies the list;

(09/05/2025) - version 0.8.5

- list_call now can receive a context to be used;
- new functions: table_init, table_set, table_push, table_unshift, table_insert;

(29/04/2025) - version 0.8.4

- full rework;
- parse, interpret, string functions, new_ functions, labels, macros and everything thats not part of the list system been moved to buxu;
- interpret function is now called list_call;
- bruter still doing functions calls and such, but you need to make the lists manually, which is not hard at all, but;
- you can also use buxu, its basically the old bruter, those removed features like parsing, labeling and such are now part of buxu;
- List type now does have a property called keys, which is meant for tables, it wont be initialized unless you init it with table_keys;
- tables and lists share the same struct, but tables init the List.keys, while lists just set it to NULL;
- every list function also works with tables;
- new function list_set, this only works for tables;

(25/04/2025) - version 0.8.3

- say goodbye to the '' "" and (@) delimiters