@@ -6,6 +6,7 @@
 - all LIST_* macros are now prefixed as BRUTER_*;
 - every function is now declared and defined static inline(though, the compiler might not inline them anyway);
 - bruter is now a header-only library, you can just include bruter.h and use it;
+- replaced value macros with equivalent inline functions;
 - some safety checks added;
 
 (19/05/2025) - version 0.8.6
